# keyvault-lite

./: CMakeLists.txt  FormController.cpp  FormController.h  README.md  main.cpp  qml.qrc
qml/: main.qml
